--- a/Web/src/main/webapp/WEB-INF/jsp/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/jsp/common/header.jspx
@@ -1,6 +1,7 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
-          xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:jsp="http://java.sun.com/JSP/Page"
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
@@ -11,32 +12,33 @@
                     <span class="icon-bar"/>
                     <span class="icon-bar"/>
                 </button>
-                <a class="navbar-brand" href="#">Blog</a>
+                <a class="navbar-brand" href="${pageContext.request.contextPath}/">Blog</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="about.jsp">About</a></li>
-                     <li><a href="write.jsp">New record</a></li>
-                     <li><a href="controller?action=adminarea">Adminpanel</a></li>
+                    <li><a href="${pageContext.request.contextPath}/about">About</a></li>
+                     <li><a href="${pageContext.request.contextPath}/write">New record</a></li>
+                     <li><a href="${pageContext.request.contextPath}/admin">Adminpanel</a></li>
                 </ul>
-                    <form action="login.jsp" class="navbar-form navbar-right">
-                        <button type="submit" class="btn btn-default">Sign on</button>
+                    <form action="${pageContext.request.contextPath}/login" class="navbar-form navbar-right">
+                        <button type="submit" class="btn btn-default">Sign in</button>
                     </form>
             </div>
         </div>
     </nav>
-    <!--<c:if test="${not empty alert}">-->
-        <!--<div class="row">-->
-            <!--<div class="container">-->
-                <!--<div class="col-md-4 col-md-offset-4">-->
-                    <!--<div class="alert ${alert.alertClass} alert-dismissible" role="alert">-->
-                        <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-                        <!--${alert.alertMessage}-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<c:remove var="alert" scope="session" />-->
-    <!--</c:if>-->
+    <!--@elvariable id="alert" type="com.criticalgnome.blog.utils.Alert"-->
+    <c:if test="${not empty alert}">
+        <div class="row">
+            <div class="container">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="alert ${alert.alertClass} alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&amp;times;</span></button>
+                        ${alert.alertMessage}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <c:remove var="alert" scope="session" />
+    </c:if>
 
 </jsp:root>
