--- a/Web/src/main/webapp/WEB-INF/jsp/layouts/default.jspx
+++ b/Web/src/main/webapp/WEB-INF/jsp/layouts/default.jspx
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <html xmlns:jsp="http://java.sun.com/JSP/Page"
-      xmlns:tiles="http://tiles.apache.org/tags-tiles"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:tiles="http://tiles.apache.org/tags-tiles">
 
 <jsp:output doctype-public="-//W3C//DTD XHTML 1.1//EN"
             doctype-system="http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"
             doctype-root-element="html"
             omit-xml-declaration="false"
+
 />
 
 <jsp:directive.page pageEncoding="UTF-8" contentType="text/html; UTF-8"/>
@@ -23,20 +23,10 @@
 </head>
 
 <body>
-<div class="row">
     <tiles:insertAttribute name="header"/>
-</div>
-<div class="row">
-    <div class="container">
-        <div class="col-md-12">
-            <tiles:insertAttribute name="body"/>
-        </div>
-    </div>
-</div>
-<div class="row">
+    <tiles:insertAttribute name="body"/>
     <tiles:insertAttribute name="footer"/>
-</div>
-<script src="${pageContext.request.contextPath}/assets/js/jquery.min.js"/>
+<script src="${pageContext.request.contextPath}/assets/js/jquery-3.2.1.min.js"/>
 <script src="${pageContext.request.contextPath}/assets/js/bootstrap.min.js"/>
 </body>
 
