--- a/Web/src/main/webapp/WEB-INF/jsp/views/admin.jspx
+++ b/Web/src/main/webapp/WEB-INF/jsp/views/admin.jspx
@@ -6,7 +6,7 @@
 
     <div class="container">
         <div class="col-md-12">
-            <h1>Something went wrong!</h1>
+            <h1>Admin Panel</h1>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam blanditiis commodi
             dicta distinctio ducimus error expedita incidunt ipsam non odit voluptatum. Alias, corporis earum facilis
             id iste maxime!
