--- a/Web/src/main/webapp/WEB-INF/jsp/views/error.jspx
+++ b/Web/src/main/webapp/WEB-INF/jsp/views/error.jspx
@@ -1,15 +1,14 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
-          xmlns:form="http://www.springframework.org/tags/form">
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <div class="container">
         <div class="col-md-12">
             <h1>Something went wrong!</h1>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam blanditiis commodi
-            dicta distinctio ducimus error expedita incidunt ipsam non odit voluptatum. Alias, corporis earum facilis
-            id iste maxime!
+            <p><c:out value="${message}"/></p>
+            <p>Try to begin from <a href="${pageContext.request.contextPath}/">main page</a>
+                or return to <a href="javascript:history.back()">previous page</a> and try again.</p>
         </div>
     </div>
 
