--- a/Web/src/main/webapp/WEB-INF/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/common/header.jspx
@@ -1,27 +1,29 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:spring="http://www.springframework.org/tags">
 
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only"><spring:message code="navbar.toggle"/></span>
                     <span class="icon-bar"/>
                     <span class="icon-bar"/>
                     <span class="icon-bar"/>
                 </button>
-                <a class="navbar-brand" href="${pageContext.request.contextPath}/">Blog</a>
+                <a class="navbar-brand" href="${pageContext.request.contextPath}/"><spring:message code="navbar.sitename"/></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="${pageContext.request.contextPath}/about">About</a></li>
-                     <li><a href="${pageContext.request.contextPath}/write">New record</a></li>
-                     <li><a href="${pageContext.request.contextPath}/admin">Adminpanel</a></li>
+                    <li><a href="${pageContext.request.contextPath}/about"><spring:message code="navbar.about"/></a></li>
+                     <li><a href="${pageContext.request.contextPath}/write"><spring:message code="navbar.newrecord"/></a></li>
+                     <li><a href="${pageContext.request.contextPath}/admin"><spring:message code="navbar.adminpanel"/></a></li>
                 </ul>
                     <form action="${pageContext.request.contextPath}/login" class="navbar-form navbar-right">
-                        <button type="submit" class="btn btn-default">Sign in</button>
+                        <button type="submit" class="btn btn-default"><spring:message code="navbar.signin"/></button>
+                        <!--<button type="submit" class="btn btn-default"><spring:message code="navbar.signout"/></button>-->
                     </form>
             </div>
         </div>
