--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="col-md-6 col-md-offset-3">
 
-        <form:form action="${pageContext.request.contextPath}/login" commandName="user" method="post" class="form-horizontal">
+        <form:form action="${pageContext.request.contextPath}/login" modelAttribute="user" method="post" class="form-horizontal">
             <div class="form-group">
                 <form:label for="email" path="email" class="col-sm-2 control-label">E-mail</form:label>
                 <div class="col-sm-10">
