--- a/Web/src/main/webapp/WEB-INF/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/common/header.jspx
@@ -33,14 +33,15 @@
         <div class="row">
             <div class="container">
                 <div class="col-md-4 col-md-offset-4">
-                    <div class="alert ${alert.alertClass} alert-dismissible" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&amp;times;</span></button>
+                    <div class="alert alert-dismissible ${alert.alertClass}" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&amp;times;</span>
+                        </button>
                         ${alert.alertMessage}
                     </div>
                 </div>
             </div>
         </div>
-        <c:remove var="alert" scope="session" />
     </c:if>
 
 </jsp:root>
