--- a/Web/src/main/webapp/WEB-INF/views/error.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/error.jspx
@@ -1,14 +1,14 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:spring="http://www.springframework.org/tags">
 
     <div class="container">
         <div class="col-md-12">
-            <h1>Something went wrong!</h1>
+            <div class="page-header"><h1><spring:message code="error.header"/></h1></div>
             <p><c:out value="${message}"/></p>
-            <p>Try to begin from <a href="${pageContext.request.contextPath}/">main page</a>
-                or return to <a href="javascript:history.back()">previous page</a> and try again.</p>
+            <p><spring:message code="error.text"/></p>
         </div>
     </div>
 
