--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -1,7 +1,8 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:form="http://www.springframework.org/tags/form">
+          xmlns:form="http://www.springframework.org/tags/form"
+          xmlns:spring="http://www.springframework.org/tags">
 <jsp:output omit-xml-declaration="true"/>
 <jsp:directive.page pageEncoding="UTF-8" contentType="text/html; UTF-8"/>
 
@@ -10,21 +11,21 @@
 
         <form:form action="${pageContext.request.contextPath}/login" modelAttribute="user" method="post" class="form-horizontal">
             <div class="form-group">
-                <form:label for="email" path="email" class="col-sm-2 control-label">E-mail</form:label>
-                <div class="col-sm-10">
+                <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="login.form.label.email"/></form:label>
+                <div class="col-sm-9">
                     <form:input type="email" id="email" path="email" class="form-control" placeholder="enter email"/>
                 </div>
             </div>
             <div class="form-group">
-                <form:label for="password" path="password" class="col-sm-2 control-label">Password</form:label>
-                <div class="col-sm-10">
+                <form:label for="password" path="password" class="col-sm-3 control-label"><spring:message code="login.form.label.password"/></form:label>
+                <div class="col-sm-9">
                     <form:input type="password" id="password" path="password" class="form-control" placeholder="enter password"/>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary">Sign in</button>&amp;nbsp;
-                    <a href="${pageContext.request.contextPath}/register"><button type="button" class="btn btn-default">Sign on</button></a>
+                <div class="col-sm-offset-3 col-sm-9">
+                    <button type="submit" class="btn btn-primary"><spring:message code="login.form.button.signin"/></button>&amp;nbsp;
+                    <a href="${pageContext.request.contextPath}/register"><button type="button" class="btn btn-default"><spring:message code="login.form.button.signon"/></button></a>
                 </div>
             </div>
         </form:form>
