--- a/Web/src/main/webapp/WEB-INF/views/register.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/register.jspx
@@ -1,7 +1,8 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:form="http://www.springframework.org/tags/form">
+          xmlns:form="http://www.springframework.org/tags/form"
+          xmlns:spring="http://www.springframework.org/tags">
 
     <div class="row">
         <div class="container">
@@ -9,21 +10,21 @@
                 <form:form action="${pageContext.request.contextPath}/register" modelAttribute="user" method="post"
                            class="form-horizontal">
                     <div class="form-group ${emailClass}">
-                        <form:label for="email" path="email" class="col-sm-3 control-label">Email</form:label>
+                        <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="register.form.label.email"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="email" id="email" path="email" class="form-control" placeholder="enter email"/>
                             <span class="help-block"><form:errors path="email"/></span>
                         </div>
                     </div>
                     <div class="form-group ${passwordClass}">
-                        <form:label for="password" path="password" class="col-sm-3 control-label">Password</form:label>
+                        <form:label for="password" path="password" class="col-sm-3 control-label"><spring:message code="register.form.label.password"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="password" id="password" path="password" class="form-control" placeholder="enter password"/>
                             <span class="help-block"><form:errors path="password"/></span>
                         </div>
                     </div>
                     <div class="form-group ${nickNameClass}">
-                        <form:label for="nickName" path="nickName" class="col-sm-3 control-label">Nickname</form:label>
+                        <form:label for="nickName" path="nickName" class="col-sm-3 control-label"><spring:message code="register.form.label.nickname"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="text" id="nickName" path="nickName" class="form-control" placeholder="enter nickname"/>
                             <span class="help-block"><form:errors path="nickName"/></span>
@@ -31,14 +32,14 @@
                     </div>
                     <div class="form-group ${firstNameClass}">
                         <form:label for="firstName" path="firstName"
-                                    class="col-sm-3 control-label">First Name</form:label>
+                                    class="col-sm-3 control-label"><spring:message code="register.form.label.firstname"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="text" id="firstName" path="firstName" class="form-control" placeholder="enter first name"/>
                             <span class="help-block"><form:errors path="firstName"/></span>
                         </div>
                     </div>
                     <div class="form-group ${lastNameClass}">
-                        <form:label for="lastName" path="lastName" class="col-sm-3 control-label">Last Name</form:label>
+                        <form:label for="lastName" path="lastName" class="col-sm-3 control-label"><spring:message code="register.form.label.lastname"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="text" id="lastName" path="lastName" class="form-control" placeholder="enter last name"/>
                             <span class="help-block"><form:errors path="lastName"/></span>
@@ -46,7 +47,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-9">
-                            <button type="submit" class="btn btn-primary">Sign on</button>
+                            <button type="submit" class="btn btn-primary"><spring:message code="register.form.button.signon"/></button>
                         </div>
                     </div>
                 </form:form>
