--- a/Web/src/main/webapp/WEB-INF/views/write.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/write.jspx
@@ -6,7 +6,7 @@
 
     <div class="container">
         <div class="col-md-12">
-            <h1>New Record</h1>
+            <div class="page-header"><h1>New Record</h1></div>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam blanditiis commodi
             dicta distinctio ducimus error expedita incidunt ipsam non odit voluptatum. Alias, corporis earum facilis
             id iste maxime!
