--- a/Web/src/main/webapp/WEB-INF/views/write.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/write.jspx
@@ -1,8 +1,6 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
-          xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
-          xmlns:form="http://www.springframework.org/tags/form">
+          xmlns:jsp="http://java.sun.com/JSP/Page">
 
     <div class="container">
         <div class="col-md-12">
