--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="col-md-6 col-md-offset-3">
 
-        <form:form action="${pageContext.request.contextPath}/login" modelAttribute="user" method="post" class="form-horizontal">
+        <form:form action="${pageContext.request.contextPath}/users/login" modelAttribute="user" method="post" class="form-horizontal">
             <div class="form-group">
                 <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="login.form.label.email"/></form:label>
                 <div class="col-sm-9">
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button type="submit" class="btn btn-primary"><spring:message code="login.form.button.signin"/></button>&amp;nbsp;
-                    <a href="${pageContext.request.contextPath}/register"><button type="button" class="btn btn-default"><spring:message code="login.form.button.signon"/></button></a>
+                    <a href="${pageContext.request.contextPath}/users/register"><button type="button" class="btn btn-default"><spring:message code="login.form.button.signon"/></button></a>
                 </div>
             </div>
         </form:form>
