--- a/Web/src/main/webapp/WEB-INF/views/main.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/main.jspx
@@ -22,17 +22,17 @@
                             </p>
                         </div>
                         <div class="panel-body">
-                            <h6><b><spring:message code="main.label.category"/>: <a href="${pageContext.request.contextPath}/category/${record.category.id}">${record.category.name}</a></b></h6>
+                            <h6><b><spring:message code="main.label.category"/>: <a href="${pageContext.request.contextPath}/categories/${record.category.id}">${record.category.name}</a></b></h6>
                             ${record.body}
                             <br/>
                             <hr/>
                             <c:forEach items="${record.tags}" var="tag">
-                                <a href="${pageContext.request.contextPath}/tag/${tag.id}"><span class="badge">${tag.name}</span></a>
+                                <a href="${pageContext.request.contextPath}/tags/${tag.id}"><span class="badge">${tag.name}</span></a>
                             </c:forEach>
                         </div>
                         <div class="panel-footer">
                             <small>
-                                <spring:message code="main.label.author"/>: ${record.author.nickName}
+                                <spring:message code="main.label.author"/>: <a href="${pageContext.request.contextPath}/users/${record.author.id}">${record.author.nickName}</a>
                             </small>
                         </div>
                     </div>
