--- a/Web/src/main/webapp/WEB-INF/views/main.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/main.jspx
@@ -16,11 +16,9 @@
                         <div class="panel-heading">
                             <h3 class="panel-title"><b>${record.header}</b></h3>
                             <p><small>${record.createdAt}</small></p>
-                            <!--<a href="/records/edit/${record.id}">-->
-                            <!--<a href="/records/delete/${record.id}">-->
                             <div class="btn-group btn-group-xs" role="group"  aria-label="...">
-                                <button type="button" class="btn btn-default"  onclick="location.href='/records/edit/${record.id}';"><spring:message code="main.button.edit"/></button>
-                                <button type="button" class="btn btn-default"  onclick="location.href='/records/delete/${record.id}';"><spring:message code="main.button.delete"/></button>
+                                <button type="button" class="btn btn-default"  onclick="location.href='${pageContext.request.contextPath}/records/edit/${record.id}';"><spring:message code="main.button.edit"/></button>
+                                <button type="button" class="btn btn-default"  onclick="location.href='${pageContext.request.contextPath}/records/delete/${record.id}';"><spring:message code="main.button.delete"/></button>
                             </div>
                         </div>
                         <div class="panel-body">
