--- a/Web/src/main/webapp/WEB-INF/views/write.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/write.jspx
@@ -1,13 +1,41 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
-          xmlns:jsp="http://java.sun.com/JSP/Page">
+          xmlns:jsp="http://java.sun.com/JSP/Page"
+          xmlns:form="http://www.springframework.org/tags/form"
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <div class="container">
         <div class="col-md-12">
             <div class="page-header"><h1>New Record</h1></div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam blanditiis commodi
-            dicta distinctio ducimus error expedita incidunt ipsam non odit voluptatum. Alias, corporis earum facilis
-            id iste maxime!
+            <form:form action="${pageContext.request.contextPath}/records" modelAttribute="record" method="post">
+                <form:input type="hidden" id="id" path="id" value=""/>
+                <div class="form-group">
+                    <form:label for="header" path="header">header</form:label>
+                    <form:input type="text" id="header" path="header" class="form-control" value=""/>
+                </div>
+                <div class="form-group">
+                    <label for="categoryId" >category</label>
+                    <select id="categoryId" name="categoryId" class="form-control">
+                        <c:forEach items="${categoryLines}" var="category">
+                            <c:if test="${category.id == record.category.id}">
+                                <option value="${category.id}" selected="selected">${category.name}</option>
+                            </c:if>
+                            <c:if test="${category.id != record.category.id}">
+                                <option value="${category.id}">${category.name}</option>
+                            </c:if>
+                        </c:forEach>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <form:label for="body" path="body">body</form:label>
+                    <form:textarea id="body" path="body" rows="10" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="tags">tags</label>
+                    <input type="text" id="tags" name="tags" class="form-control" value=""/>
+                </div>
+                <button type="submit" id="submit" name="submit" class="btn btn-primary">submit</button>
+            </form:form>
         </div>
     </div>
 
