--- a/Web/src/main/webapp/WEB-INF/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/common/header.jspx
@@ -2,7 +2,8 @@
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:c="http://java.sun.com/jsp/jstl/core"
-          xmlns:spring="http://www.springframework.org/tags">
+          xmlns:spring="http://www.springframework.org/tags"
+          xmlns:sec="http://www.springframework.org/security/tags">
 
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
@@ -22,16 +23,16 @@
                     <li><a href="${pageContext.request.contextPath}/admin/"><spring:message code="navbar.adminpanel"/></a></li>
                 </ul>
                 <!--@elvariable id="authorisedUser" type="com.criticalgnome.blog.entities.User"-->
-                <c:if test="${empty authorisedUser}">
+                <sec:authorize access="isAnonymous()">
                     <form action="${pageContext.request.contextPath}/users/login" class="navbar-form navbar-right">
                         <button type="submit" class="btn btn-default"><spring:message code="navbar.signin"/></button>
                     </form>
-                </c:if>
-                <c:if test="${not empty authorisedUser}">
+                </sec:authorize>
+                <sec:authorize access="isAuthenticated()">
                     <form action="${pageContext.request.contextPath}/users/logout" class="navbar-form navbar-right">
                         <button type="submit" class="btn btn-default"><spring:message code="navbar.signout"/></button>
                     </form>
-                </c:if>
+                </sec:authorize>
             </div>
         </div>
     </nav>
@@ -48,5 +49,6 @@
             </div>
         </div>
     </c:if>
+    <sec:authentication property="principal"/>
 
 </jsp:root>
