--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -2,15 +2,41 @@
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:form="http://www.springframework.org/tags/form"
-          xmlns:spring="http://www.springframework.org/tags">
+          xmlns:spring="http://www.springframework.org/tags" 
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 <jsp:output omit-xml-declaration="true"/>
 <jsp:directive.page pageEncoding="UTF-8" contentType="text/html; UTF-8"/>
+    
+    <!--@elvariable id="alert" type="com.criticalgnome.blog.utils.Alert"-->
+    <c:if test="${param.error != null}">
+        <div class="container">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="alert alert-dismissible alert-danger" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&amp;times;</span>
+                    </button>
+                    <spring:message code="alert.login.denied"/>
+                </div>
+            </div>
+        </div>
+    </c:if>
+    <c:if test="${param.logout != null}">
+        <div class="container">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="alert alert-dismissible alert-warning" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&amp;times;</span>
+                    </button>
+                    <spring:message code="alert.logout"/>
+                </div>
+            </div>
+        </div>
+    </c:if>
 
 <div class="container">
     <div class="col-md-6 col-md-offset-3">
 
         <form:form action="${pageContext.request.contextPath}/users/auth" modelAttribute="user" method="post" class="form-horizontal">
-            <!--<input type="hidden" name="${_csrf.parameterName}"  value="${_csrf.token}"><jsp:text/></input>-->
             <div class="form-group">
                 <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="login.form.label.email"/></form:label>
                 <div class="col-sm-9">
@@ -21,6 +47,12 @@
                 <form:label for="password" path="password" class="col-sm-3 control-label"><spring:message code="login.form.label.password"/></form:label>
                 <div class="col-sm-9">
                     <form:input type="password" id="password" name="password" path="password" class="form-control" placeholder="enter password"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="memory" class="col-sm-3 control-label"><spring:message code="login.form.label.memory"/></label>
+                <div class="col-sm-9">
+                    <input type="checkbox" id="memory" name="memory"/>
                 </div>
             </div>
             <div class="form-group">
