--- a/Web/src/main/webapp/WEB-INF/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/common/header.jspx
@@ -19,17 +19,21 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="${pageContext.request.contextPath}/about"><spring:message code="navbar.about"/></a></li>
-                    <li><a href="${pageContext.request.contextPath}/records/write"><spring:message code="navbar.newrecord"/></a></li>
-                    <li><a href="${pageContext.request.contextPath}/admin/"><spring:message code="navbar.adminpanel"/></a></li>
+                    <sec:authorize access="isAuthenticated()">
+                        <li><a href="${pageContext.request.contextPath}/records/add"><spring:message code="navbar.newrecord"/></a></li>
+                    </sec:authorize>
+                    <sec:authorize access="hasRole('ROLE_ADMINISTRATOR')">
+                        <li><a href="${pageContext.request.contextPath}/admin"><spring:message code="navbar.adminpanel"/></a></li>
+                    </sec:authorize>
                 </ul>
                 <!--@elvariable id="authorisedUser" type="com.criticalgnome.blog.entities.User"-->
                 <sec:authorize access="isAnonymous()">
-                    <form action="${pageContext.request.contextPath}/users/login" class="navbar-form navbar-right">
+                    <form action="${pageContext.request.contextPath}/login" class="navbar-form navbar-right">
                         <button type="submit" class="btn btn-default"><spring:message code="navbar.signin"/></button>
                     </form>
                 </sec:authorize>
                 <sec:authorize access="isAuthenticated()">
-                    <form action="${pageContext.request.contextPath}/users/logout" class="navbar-form navbar-right">
+                    <form action="${pageContext.request.contextPath}/logout" class="navbar-form navbar-right">
                         <button type="submit" class="btn btn-default"><spring:message code="navbar.signout"/></button>
                     </form>
                 </sec:authorize>
