--- a/Web/src/main/webapp/WEB-INF/views/admin.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/admin.jspx
@@ -1,13 +1,54 @@
 <jsp:root version="2.0"
           xmlns="http://www.w3.org/1999/xhtml"
-          xmlns:jsp="http://java.sun.com/JSP/Page">
+          xmlns:jsp="http://java.sun.com/JSP/Page"
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <div class="container">
-        <div class="col-md-12">
-            <div class="page-header"><h1>Admin Panel</h1></div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aliquam aperiam blanditiis commodi
-            dicta distinctio ducimus error expedita incidunt ipsam non odit voluptatum. Alias, corporis earum facilis
-            id iste maxime!
+        <div class="col-md-5">
+            <table class="table table-condensed table-hover">
+                <tr>
+                    <th>Id</th>
+                    <th colspan="3">Name</th>
+                </tr>
+                <c:forEach items="${categoryDTOs}" var="category">
+                    <tr>
+                        <td>${category.id}</td>
+                        <td>${category.name}</td>
+                        <td width="1%"><a href="${pageContext.request.contextPath}/categories/edit/${category.id}">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"/>
+                        </a></td>
+                        <td width="1%"><a href="${pageContext.request.contextPath}/categories/delete/${category.id}">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"/>
+                        </a></td>
+                    </tr>
+                </c:forEach>
+            </table>
+            <a href="${pageContext.request.contextPath}/categories/add">Add category</a>
+        </div>
+        <div class="col-md-7">
+            <table class="table table-condensed table-hover">
+                <tr>
+                    <th>Id</th>
+                    <th>Nickname</th>
+                    <th>Full Name</th>
+                    <th colspan="3">Role</th>
+                </tr>
+                <c:forEach items="${users}" var="user">
+                    <tr>
+                        <td>${user.id}</td>
+                        <td>${user.nickName}</td>
+                        <td>${user.firstName} ${user.lastName}</td>
+                        <td>${user.role.name}</td>
+                        <td width="1%"><a href="${pageContext.request.contextPath}/users/edit/${user.id}">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"/>
+                        </a></td>
+                        <td width="1%"><a href="${pageContext.request.contextPath}/users/delete/${user.id}">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"/>
+                        </a></td>
+                    </tr>
+                </c:forEach>
+            </table>
+            <a href="${pageContext.request.contextPath}/users/add">Add user</a>
         </div>
     </div>
 
