--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="col-md-6 col-md-offset-3">
 
-        <form:form action="${pageContext.request.contextPath}/users/auth" modelAttribute="user" method="post" class="form-horizontal">
+        <form:form action="${pageContext.request.contextPath}/auth" modelAttribute="user" method="post" class="form-horizontal">
             <div class="form-group">
                 <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="login.form.label.email"/></form:label>
                 <div class="col-sm-9">
