--- a/Web/src/main/webapp/WEB-INF/views/user.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/user.jspx
@@ -2,13 +2,13 @@
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:form="http://www.springframework.org/tags/form"
-          xmlns:spring="http://www.springframework.org/tags">
+          xmlns:spring="http://www.springframework.org/tags" xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <div class="row">
         <div class="container">
             <div class="col-md-6 col-md-offset-3">
-                <form:form action="${pageContext.request.contextPath}/users/register" modelAttribute="user" method="post"
-                           class="form-horizontal">
+                <form:form action="${pageContext.request.contextPath}/users" modelAttribute="user" method="post" class="form-horizontal">
+                    <form:input path="id" id="id" name="id" type="hidden"/>
                     <div class="form-group ${emailClass}">
                         <form:label for="email" path="email" class="col-sm-3 control-label"><spring:message code="register.form.label.email"/></form:label>
                         <div class="col-sm-9">
@@ -45,6 +45,23 @@
                             <span class="help-block"><form:errors path="lastName"/></span>
                         </div>
                     </div>
+                    <c:if test="${not empty roles}">
+                        <div class="form-group">
+                            <label for="roleId" class="col-sm-3 control-label"><spring:message code="register.form.label.role"/></label>
+                            <div class="col-sm-9">
+                                <select id="roleId" name="roleId" class="form-control">
+                                    <c:forEach items="${roles}" var="role">
+                                        <c:if test="${user.role.id == role.id}">
+                                            <option value="${role.id}" selected="selected">${role.name}</option>
+                                        </c:if>
+                                        <c:if test="${user.role.id != role.id}">
+                                            <option value="${role.id}">${role.name}</option>
+                                        </c:if>
+                                    </c:forEach>
+                                </select>
+                            </div>
+                        </div>
+                    </c:if>
                     <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-9">
                             <button type="submit" class="btn btn-primary"><spring:message code="register.form.button.signon"/></button>
