--- a/Web/src/main/webapp/WEB-INF/views/record.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/record.jspx
@@ -2,7 +2,8 @@
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:form="http://www.springframework.org/tags/form"
-          xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:spring="http://www.springframework.org/tags">
 
     <div class="container">
         <div class="col-md-12">
@@ -11,11 +12,11 @@
                 <form:input type="hidden" id="id" path="id" value=""/>
                 <form:input type="hidden" id="authorId" path="authorId" value=""/>
                 <div class="form-group">
-                    <form:label for="header" path="header">header</form:label>
+                    <form:label for="header" path="header"><spring:message code="record.form.label.header"/></form:label>
                     <form:input type="text" id="header" path="header" class="form-control" value=""/>
                 </div>
                 <div class="form-group">
-                    <label for="categoryId" >category</label>
+                    <label for="categoryId" ><spring:message code="record.form.label.category"/></label>
                     <form:select id="categoryId" path="categoryId" class="form-control">
                         <c:forEach items="${categoryDTOs}" var="category">
                             <c:if test="${category.id == recordDTO.categoryId}">
@@ -28,14 +29,14 @@
                     </form:select>
                 </div>
                 <div class="form-group">
-                    <form:label for="body" path="body">body</form:label>
+                    <form:label for="body" path="body"><spring:message code="record.form.label.body"/></form:label>
                     <form:textarea id="body" path="body" rows="10" class="form-control"/>
                 </div>
                 <div class="form-group">
-                    <form:label for="tags" path="tags">tags</form:label>
+                    <form:label for="tags" path="tags"><spring:message code="record.form.label.tags"/></form:label>
                     <form:input type="text" id="tags" path="tags" class="form-control" value=""/>
                 </div>
-                <button type="submit" id="submit" name="submit" class="btn btn-primary">submit</button>
+                <button type="submit" id="submit" name="submit" class="btn btn-primary"><spring:message code="record.form.button.submit"/></button>
             </form:form>
         </div>
     </div>
